--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         Nijmegen, The Netherlands
       </p>
       <p>
-        For inquiries: <a href="tianai.dong@mpi.nl">neuro-ai@donders.ru.nl</a>
+        For inquiries: <a href="tianai.dong@mpi.nl">tianai.dong@mpi.nl</a>
       </p>
       <p>
         Template adapted from <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron's website</a>
