--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
       </div>
       
       <!-- Updated form with action and method attributes -->
-      <form id="signupForm" action="https://formsubmit.co/tianai.dong@mpi.nl" method="POST">
+        <form action="https://formsubmit.co/tianai.dong@mpi.nl" method="POST" />
         <!-- Hidden fields for FormSubmit configuration -->
         <input type="hidden" name="_subject" value="New Neuro-AI Focus Group Signup">
         <input type="hidden" name="_captcha" value="false">
