--- a/index.html
+++ b/index.html
@@ -115,12 +115,8 @@
       <div class="thank-you-icon">✓</div>
       <div class="thank-you-title">Thank You for Signing Up!</div>
       <div class="thank-you-message">
-        Your application has been successfully submitted to join the Neuro-AI Focus Group.
-        We've added your email to our mailing list and will keep you updated on upcoming events and activities.
+        We've added your email to our Neuro-AI focus group mailing list and will keep you updated on upcoming events and activities :)
       </div>
-      <p>
-        We look forward to collaborating with you on bridging neuroscience and artificial intelligence research at the Donders Institute.
-      </p>
       <a href="index.html" class="button">Return to Homepage</a>
     </div>
     
