--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
       <a href="#about">About</a>
       <a href="#news">News</a>
       <a href="#schedule">Schedule</a>
-      <a href="#members">Members</a>
+      <a href="#members">Organizers</a>
       <a href="#signup">Sign Up</a>
     </div>
     
