--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div id="schedule" class="section">
       <div class="heading">Schedule</div>
       <div class="schedule-item">
-        <div class="schedule-date"> (Tenative) May, 2025 | Monday | MM 01.620 </div>
+        <div class="schedule-date"> (Tentative) May, 2025 | Monday | MM 01.620 </div>
         <div class="schedule-title">Kick-off Meeting</div>
         <p>
           Details come soon!
@@ -244,6 +244,7 @@
     
     <div id="signup" class="section">
       <div class="heading">Sign Up for the Focus Group</div>
+      <form method="post" name="Contact Form" netlify>
       <form name="contact" method="POST" netlify>
         <p>
           <label>Your Name: <input type="text" name="name" /></label>
