--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@
     
     <div id="signup" class="section">
       <div class="heading">Sign Up for the Focus Group</div>
-      <form method="post" name="Contact Form" netlify>
-      <form name="contact" method="POST" netlify>
+      <form method="post" name="Contact Form" data-netlify="true">
         <p>
           <label>Your Name: <input type="text" name="name" /></label>
         </p>
@@ -253,7 +252,7 @@
           <label>Your Email: <input type="email" name="email" /></label>
         </p>
         <p>
-          <label>Any Suggestions?: <textarea name="message"></textarea></label>
+          <label>Suggestions: <textarea name="message"></textarea></label>
         </p>
         <p>
           <button type="submit">Send</button>
