--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
     <div id="schedule" class="section">
       <div class="heading">Schedule</div>
       <div class="schedule-item">
-        <div class="schedule-date"> May 19 TBD, 2025 | Monday | MM 01.620 </div>
+        <div class="schedule-date"> June 16 14:00-16:00, 2025 | Monday | MM 01.620 </div>
         <div class="schedule-title">Kick-off Meeting</div>
       </div>
       <div class="schedule-item">
