--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
           <p><span class="schedule-time">14:00 - 14:05</span> — Welcome and Introduction<br>
           <p><span class="schedule-time">14:15 - 14:50</span> — PI pitches<br>
           <p><span class="schedule-time">15:00 - 16:00</span> — Mini-poster session<br>        
+          <p><span class="schedule-time">15:00 - 16:00</span> — Mini-poster session<br>
+          <span class="schedule-speaker">Bring your bold ideas, from polished prints to pencil sketches (A4). If you don't have one, no worries, we will provide pencil and paper.</span><br>        
         </div>
       </div>
       
