--- a/index.html
+++ b/index.html
@@ -247,9 +247,9 @@
         <div class="schedule-details">
           <p><span class="schedule-time">14:00 - 14:05</span> — Welcome and Introduction<br>
           <p><span class="schedule-time">14:15 - 14:50</span> — PI pitches<br>
+          <p><span class="schedule-time">14:45 - 15:00</span> — Coffee & Cookies <br>
           <p><span class="schedule-time">15:00 - 16:00</span> — Mini-poster session<br>        
-          <p><span class="schedule-time">15:00 - 16:00</span> — Mini-poster session<br>
-          <span class="schedule-speaker">Bring your bold ideas, from polished prints to pencil sketches (A4). If you don't have one, no worries, we will provide pencil and paper.</span><br>        
+          <span class="schedule-speaker">Bring your ideas, from polished prints to pencil sketches (A4). If you don't have one, no worries, we will provide pencil and paper.</span><br>        
         </div>
       </div>
       
