--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
         <div class="schedule-title">Kick-off Meeting</div>
         <div class="schedule-details">
           <p><span class="schedule-time">14:00 - 14:05</span> — Welcome and Introduction<br>
-          <p><span class="schedule-time">14:5 - 14:50</span> — PI pitches<br>
+          <p><span class="schedule-time">14:05 - 14:50</span> — PI pitches<br>
           <p><span class="schedule-time">14:50 - 15:00</span> — Coffee & Cookies <br>
           <p><span class="schedule-time">15:00 - 16:00</span> — Mini-poster session<br>        
-          <span class="schedule-speaker">Bring your ideas, from polished prints to pencil sketches (A4). If you don't have one, no worries, we will provide pencil and paper.</span><br>        
+          <span class="schedule-speaker">Bring an A4 paper to introduce you and your work—whether it's from a recent project or a pencil sketch of a future idea. If you don’t have one, no worries—we’ll provide paper and pencils on-site!</span><br>        
         </div>
       </div>
       
