--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
           <p><span class="schedule-time">14:05 - 14:50</span> — PI pitches<br>
           <p><span class="schedule-time">14:50 - 15:00</span> — Coffee & Cookies <br>
           <p><span class="schedule-time">15:00 - 16:00</span> — Mini-poster session<br>        
-          <span class="schedule-speaker">Bring along an A4 page to introduce yourself and your work—this could be a snapshot of a recent project or a pencil sketch of an idea you’re still dreaming up. No time to prepare? Don’t worry—we’ll have paper and pencils ready on-site. Everyone’s welcome to join in, from senior researchers to those just starting out.</span><br>        
+          <span class="schedule-speaker"> Have you ever wondered about the range of Neuro-AI work happening across the Donders? Bring along an A4 page to introduce yourself and your work—this could be a snapshot of a recent project or a pencil sketch of an idea you're still dreaming up. No time to prepare? Don’t worry—we’ll have paper and pencils ready on-site. Everyone is welcome, from senior researchers to those just starting out</span><br>        
         </div>
       </div>
       
