--- a/index.html
+++ b/index.html
@@ -201,12 +201,20 @@
         height: 800px; /* Slightly taller on mobile */
       }
     }
+    .logo {
+    display: block;
+    margin: 0 auto 10px auto; /* center it and give spacing below */
+    max-width: 33%; /* one-third of container width */
+    height: auto;
+  }
+
   </style>
 </head>
 
 <body>
   <div class="container">
     <div class="header">
+      <img src="neuroai-logo_.png" alt="NeuroAI Logo" class="logo">
       <h1>Donders Neuro-AI Focus Group</h1>
       <p>Bridging neuroscience and artificial intelligence research at the Donders Institute</p>
     </div>
