Update index.html for upcoming meetings

--- a/index.html
+++ b/index.html
@@ -300,7 +300,41 @@
     
     <div id="schedule" class="section">
       <div class="heading">Schedule</div>
-      
+        <!-- NEW: upcoming 2026 meetings -->
+      <div class="schedule-item">
+        <button class="schedule-summary" aria-expanded="false" tabindex="-1">
+          <span class="schedule-date">Feb 23, 2026 | 12:30–13:30</span> —
+          <span class="schedule-title">Neuro-AI Focus Group Meeting</span>
+        </button>
+
+        <div class="schedule-details">
+          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM.02.650</strong></p>
+        </div>
+      </div>
+
+      <div class="schedule-item">
+        <button class="schedule-summary" aria-expanded="false" tabindex="-1">
+          <span class="schedule-date">Apr 13, 2026 | 12:30–13:30</span> —
+          <span class="schedule-title">Neuro-AI Focus Group Meeting</span>
+        </button>
+
+        <div class="schedule-details">
+          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM.02.650</strong></p>
+        </div>
+      </div>
+
+      <div class="schedule-item">
+        <button class="schedule-summary" aria-expanded="false" tabindex="-1">
+          <span class="schedule-date">Jun 29, 2026 | 12:30–13:30</span> —
+          <span class="schedule-title">Neuro-AI Focus Group Meeting</span>
+        </button>
+
+        <div class="schedule-details">
+          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM.02.650</strong></p>
+        </div>
+      </div>
+      <!-- /NEW -->
+
       <div class="schedule-item highlight-program">
       <button class="schedule-summary" aria-expanded="true" tabindex="-1">
         <span class="schedule-date">Nov 10, 2025 | 14:00–16:00</span> —
