--- a/index.html
+++ b/index.html
@@ -303,12 +303,11 @@
         <!-- NEW: upcoming 2026 meetings -->
       <div class="schedule-item">
         <button class="schedule-summary" aria-expanded="false" tabindex="-1">
-          <span class="schedule-date">Feb 23, 2026 | 12:30–13:30</span> —
+          <span class="schedule-date">Jun 29, 2026 | 12:30–13:30</span> —
           <span class="schedule-title">Neuro-AI Focus Group Meeting</span>
         </button>
-
         <div class="schedule-details">
-          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM.02.650</strong></p>
+          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM 02.650</strong></p>
         </div>
       </div>
 
@@ -317,26 +316,89 @@
           <span class="schedule-date">Apr 13, 2026 | 12:30–13:30</span> —
           <span class="schedule-title">Neuro-AI Focus Group Meeting</span>
         </button>
-
         <div class="schedule-details">
-          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM.02.650</strong></p>
+          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM 02.650</strong></p>
         </div>
       </div>
 
-      <div class="schedule-item">
-        <button class="schedule-summary" aria-expanded="false" tabindex="-1">
-          <span class="schedule-date">Jun 29, 2026 | 12:30–13:30</span> —
-          <span class="schedule-title">Neuro-AI Focus Group Meeting</span>
+      <div class="schedule-item highlight-program">
+        <button class="schedule-summary" aria-expanded="true" tabindex="-1">
+          <span class="schedule-date">Feb 23, 2026 | 12:30–13:30</span> —
+          <span class="schedule-title">ECR Pitch Session</span>
         </button>
 
         <div class="schedule-details">
-          <p><span class="schedule-time">12:30–13:30</span> — Location: <strong>MM.02.650</strong></p>
+          <p>
+            <!-- <span class="schedule-time">12:30–13:30</span> — -->
+            <strong>Location: MM 02.650</strong>
+          </p>
+
+          <div class="speaker-abstract">
+            <div class="abstract-text">
+              We kick off the 2026 Donders Neuro-AI Focus Group 
+              with five short pitches from early-career researchers across Donders.
+              Each speaker will showcase how they use AI to address questions in 
+              cognitive science, neuroscience and related fields.
+              <br><br>
+
+              <i>🥪🇮🇹 Vegetarian sandwiches will be provided (courtesy of the beloved DCCN Italian canteen, 
+              <a href="https://www.instagram.com/bettyandmora/?hl=en">Betty & Mora</a>)!</i>
+            </div>
+          </div>
+
+          <p><span class="schedule-time">12:30–13:15</span> — Five ECR pitches</p>
+
+          <div class="speaker-abstract">
+            <div class="speaker-title">
+              Wouter Kroot (DCN)
+            </div>
+            <div class="abstract-text">
+              “Learning top-down processing in a recurrent neural microcircuit of early visual areas”
+            </div>
+          </div>
+
+          <div class="speaker-abstract">
+            <div class="speaker-title">
+              Eleftherios Papadopoulos (DCC)
+            </div>
+            <div class="abstract-text">
+              “Instrumental use of AI for semantically informed control in visual neuroprosthetics”
+            </div>
+          </div>
+
+          <div class="speaker-abstract">
+            <div class="speaker-title">
+              Wieger Scheurer (DCCN)
+            </div>
+            <div class="abstract-text">
+              “Probing physics prediction during natural video perception using generative AI”
+            </div>
+          </div>
+
+          <div class="speaker-abstract">
+            <div class="speaker-title">
+              Roman Miletitch (MPI)
+            </div>
+            <div class="abstract-text">
+              “From Swarm Robotics to Swarm Linguistics”
+            </div>
+          </div>
+
+          <div class="speaker-abstract">
+            <div class="speaker-title">
+              Dota Tianai Dong (MPI & DCCN)
+            </div>
+            <div class="abstract-text">
+              “When LLMs Are Superhuman Here, Subhuman There”
+            </div>
+          </div>
+          <p><span class="schedule-time">13:15–13:30</span> — Networking</p>
         </div>
       </div>
-      <!-- /NEW -->
 
-      <div class="schedule-item highlight-program">
-      <button class="schedule-summary" aria-expanded="true" tabindex="-1">
+      <!-- 2025 -->
+      <div class="schedule-item">
+      <button class="schedule-summary" aria-expanded="false" tabindex="-1">
         <span class="schedule-date">Nov 10, 2025 | 14:00–16:00</span> —
         <span class="schedule-title">AI as a Model Organism</span>
       </button>
@@ -492,10 +554,5 @@
     });
   });
 </script>
-
-
 </body>
-
-
-
 </html>
